--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a recovering mainframe application developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Small town in rural Manitoba.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Ice hockey and Astronomy</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Billionaire Philanthropist</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chandler, Arizona</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be employed in a fulfilling capacity.</p>
     </section>
 
     <footer id="footer">
